# Legged-Robots-Bootcamp

./: .gitignore  .gitmodules  README.md  dynamics.py  dynamics_bootcamp.py  dynamics_workshop.py  integrator.py  lut_values.npy  walker3D_model.py
autowraptmp/: wrapped_code_0.c  wrapped_code_0.h  wrapper_module_0.c  wrapper_module_0.pyx
biped_ctrl_scripts/1_hopper_dynamics/: README.md
biped_ctrl_scripts/1_hopper_dynamics/b_bounce/: bounce.py
biped_ctrl_scripts/2_hopper_control/: README.md
biped_ctrl_scripts/3_passive_walker/: README.md
biped_ctrl_scripts/3_passive_walker/b_euler-lagrange/: projectile.py
biped_ctrl_scripts/4_walker_control/: README.md
biped_ctrl_scripts/4_walker_control/b_euler-lagrange/: projectile.py
biped_ctrl_scripts/4_walker_control/c_jacobians/: double_pendulum_jacobian.py
biped_ctrl_scripts/4_walker_control/e_walker/: passive_walker.py  passive_walker_fixpoint.py
biped_ctrl_scripts/4_walker_control/h_walker_control/: walker_control_partitioning.py
biped_ctrl_scripts/4_walker_control/i_foot_placement/: walker_P_control.py  walker_pca_control.py
biped_ctrl_scripts/5_walker_3D_control/: README.md
biped_ctrl_scripts/5_walker_3D_control/a_rotation_3D/: bounce3D.py  (+1 more)
bootcamp_scripts/1_hopper_dynamics/: README.md
bootcamp_scripts/2_hopper_control/: README.md
bootcamp_scripts/3_passive_walker/: README.md
bootcamp_scripts/4_walker_control/: README.md
bootcamp_scripts/5_walker_3D_control/: README.md
quadruped_ctrl_ros/: CMakeLists.txt  package.xml
quadruped_ctrl_ros/src/: main.cpp
viz/: walker_control_partitioning.py
(+442 files in other folders)
